Updated BIO, matched research interests with LinkedIn, and removed link to nowhere in Cockroach project.

--- a/index.html
+++ b/index.html
@@ -90,13 +90,10 @@
 		<p align="center">
                   <name>Daniel Gongora</name>
 		</p>
-		<p>I am a Ph.D. candidate at <a href="http://www.tohoku.ac.jp/en/">Tohoku University</a>, where I work at the <a href="https://www.rm.is.tohoku.ac.jp/englishtop/">Human-Robot Informatics laboratory</a>.
-		</p>
-		<p>
-                  I did my Masters at <a href="http://www.tohoku.ac.jp/en/">Tohoku University</a>, where I was advised by Masashi Konyo and funded by <a href="http://www.mext.go.jp">MEXT</a>. I did my bachelors at <a href="www.umsa.bo">Universidad Mayor de San Andr&eacute;s</a>, where I was advised by Mauricio Am&eacute;stegui.
+		<p>I obtained a Ph.D. and a Masters in Information Sciences at <a href="http://www.tohoku.ac.jp/en/">Tohoku University</a>, where I worked at the <a href="https://www.rm.is.tohoku.ac.jp/englishtop/">Human-Robot Informatics laboratory</a> under the supervision of Masashi Konyo. Before my adventure in Japan, I obtained an engineering degree in Electronics at <a href="www.umsa.bo">Universidad Mayor de San Andr&eacute;s</a>, where I was advised by Mauricio Am&eacute;stegui.
 		</p>
 		<p align=center>
-                  <a href="mailto:daniel@rm.is.tohoku.ac.jp">Email</a> &nbsp/&nbsp
+                  <a href="mailto:d.marcell.gongora@gmail.com">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=gzSsRZYAAAAJ">Google Scholar</a> &nbsp/&nbsp
                   <a href="http://www.linkedin.com/in/dmgongora/"> LinkedIn </a>
 		</p>
@@ -111,8 +108,7 @@
               <td width="100%" valign="middle">
 		<heading>Research</heading>
 		<p>
-                  I'm interested in haptics, virtual reality, and human-robot interaction. 
-		  In my research, I've worked primarily with vibrotactile feedback but I've also had a chance to experiment with peltier modules for <a href="#thermal">thermal feedback</a>, an ultrasonic array for <a href="#mid_air">mid-air haptic feedback</a>, and with a <a href="#var_friction">variable friction display</a>.
+      I am interested in creating technological solutions that improve people's interaction with data, computers, and robots. I have investigated factors affecting the performance of people using a P300-based Brain-Computer Interface, and I have developed methods based on haptic feedback for improving operator's performance in robot teleoperation and for enriching people's experience of visual media.
 		</p>
               </td>
             </tr>
@@ -301,7 +297,7 @@
                   <br>
                   <em>International collegiate Virtual Reality Contest (IVRC)</em>, 2015
 		  <br>
-		  <a href="Somewhere">Details</a> 
+		  
 
 		</p>
 		<p>Cockroach-Human Interaction lets participants experience the world from the point of view of a cockroach. Users crawl to control a small mobile robot using a custom input interface built around a pair of conveyor belts. Footsteps near the robot trigger vibrations on the user's chest and a lantern pointed towards the robot causes the camera to shake inducing feelings of agitation and anxiety in the user. </p>
