Added sentence about Nissan.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<p align="center">
                   <name>Daniel Gongora</name>
 		</p>
-		<p>I obtained a Ph.D. and a Masters in Information Sciences at <a href="http://www.tohoku.ac.jp/en/">Tohoku University</a>, where I worked at the <a href="https://www.rm.is.tohoku.ac.jp/englishtop/">Human-Robot Informatics laboratory</a> under the supervision of Masashi Konyo. Before my adventure in Japan, I obtained an engineering degree in Electronics at <a href="www.umsa.bo">Universidad Mayor de San Andr&eacute;s</a>, where I was advised by Mauricio Am&eacute;stegui.
+		<p>I am research engineer at the Mobility and AI laboratory of Nissan Advanced Technology Center. I obtained a Ph.D. and a Masters in Information Sciences at <a href="http://www.tohoku.ac.jp/en/">Tohoku University</a>, where I worked at the <a href="https://www.rm.is.tohoku.ac.jp/englishtop/">Human-Robot Informatics laboratory</a> under the supervision of Masashi Konyo. Before my adventure in Japan, I obtained an engineering degree in Electronics at <a href="www.umsa.bo">Universidad Mayor de San Andr&eacute;s</a>, where I was advised by Mauricio Am&eacute;stegui.
 		</p>
 		<p align=center>
                   <a href="mailto:d.marcell.gongora@gmail.com">Email</a> &nbsp/&nbsp
